2007-08-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * pre-setup.rb: Don't fail if there's a problem with a .po file. Just
    display a warning.

2007-08-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic.rb: New WIN32 constant.
    * lib/fantasdic/ui.rb: Use this constant.
    * lib/fantasdic/preferences.rb: Use this constant.
    * bin/pre-setup.rb: Don't use uname -a on Win32, don't hardcode ruby path
    for generating fantasdic.bat.

2007-08-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/about_dialog.rb: Forgot to include GetText.

2007-08-17 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: When a link is clicked, search all
    databases selected instead of the database the link belong to. This makes
    more sense since Fantasdic uses the concept of "virtual" dictionary.

2007-08-17 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/print.rb: Fixed a bug in the checking that last page is 
    not blank.

2007-08-16 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/dict.rb: Moved to lib/fantasdic/net/dict.rb.
    * lib/fantasdic/net/sockssocket.rb: SOCKS 5 library by Ryota Tokiwa.
    The library was imported to the source tree for convenience.
    * lib/fantasdic/ui/preferences_dialog.rb: Proxy tab.
    * lib/fantasdic/ui/main_app.rb: Load proxy. Don't crash if connection was
    closed by server.
    * lib/fantasdic.rb: includes.
    * data/fantasdic/glade/preferences_dialog.glade: Proxy tab.

2007-08-16 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/preferences_dialog.rb:
    * lib/fantasdic/ui/main_app.rb:
    * data/fantasdic/config/default.yaml:
    * data/fantasdic/glade/preferences_dialog.glade:
    Added dont_show_at_startup option. This option is going to be useful for
    users who want Fantasdic to be started when the computer boots.

2007-08-16 Mathieu Blondel <mblondel@cvs.gnome.org>
